--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blog/themes/PaperMod"]
 	path = blog/themes/PaperMod
 	url = https://github.com/adityatelange/hugo-PaperMod.git
+[submodule "www/themes/PaperMod"]
+	path = www/themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod
