--- a/www/config.yaml
+++ b/www/config.yaml
@@ -47,26 +47,30 @@ params:
 
 menu:
   main:
-    - identifier: "Archive"
-      name: "Archive"
-      url: "/archives/"
+    - identifier: "Apps"
+      name: "Apps"
+      url: "/apps/"
       weight: 1
+    - identifier: "Archives"
+      name: "Archives"
+      url: "/archives/"
+      weight: 2
     - identifier: "Series"
       name: "Series"
       url: "/series/"
-      weight: 2
+      weight: 3
     - identifier: "Tags"
       name: "Tags"
       url: "/tags/"
-      weight: 3
+      weight: 4
     - identifier: "Search" 
       name: "Search"
       url: "/search/"
-      weight: 4
+      weight: 5
     - identifier: "Home"
       name: "Home"
       url: "/"
-      weight: 5
+      weight: 6
 
 search:
   enable: true
